@@ -1,3 +1,4 @@
+stefan; 2 jul 2003:improved solution for bug 449 (mak:value  maxLength, ellipsis...)
 stefan; 2 jul 2003: fix for bug 366 (printVar for empty texts should be empty)
 fred; 1 jul 2003: fixed bug 34 (logout design, with wildcard "*") 
 stefan; 30 jun 2003: bug 449 (limiting output of mak:value with new tag parameter e.g. maxLength)  semi fixed
